--- a/tex/liite.tex
+++ b/tex/liite.tex
@@ -1,1 +1,1 @@
-Tämä teksti toimii esimerkkinä liitteiden muodostamiseen tässä dokumenttipohjassa. Vähän pidempi saa siitä kokonaisen kappaleen näköisen.
+Tämä on liite
