--- a/main.tex
+++ b/main.tex
@@ -39,12 +39,6 @@
 %% caused by using this template or not.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%% NOTICE %%%%%
-%% Please read through the entire template
-%% (files under ./tex) to find all instructions.
-%% It is possible that the attached pdf files
-%% do not include the latest information.
-%%%%%%%%%%%%%%%%%%
 
 %%%%% INSTRUCTIONS FOR COMPILING THE DOCUMENT %%%%%
 %% Overleaf: just click Recompile.
@@ -60,14 +54,6 @@
 
 %%%%% PREAMBLE %%%%%
 
-%%%%% Document class declaration.
-% The possible optional arguments are
-%   finnish - thesis in Finnish (default)
-%   english - thesis in English
-%   numeric - citations in numeric style (default)
-%   authoryear - citations in author-year style
-% Example: \documentclass[english, authoryear]{tauthesis}
-%          thesis in English with author-year citations
 \nonstopmode
 \documentclass{tauthesis}
 
@@ -85,12 +71,13 @@
 
 % Graphs
 \usepackage{pgfplots}
-\pgfplotsset{}%compat=1.15}
+\pgfplotsset{compat=1.15}
 
 % Subfigures and wrapping text
 \usepackage{subcaption}
 
 % Mathematics packages
+
 \usepackage{amsmath, amssymb, amsthm}
 %\usepackage{bm}
 
@@ -137,16 +124,11 @@
 
 %%%%% Thesis information and title page.
 
-% The titles of the work. If there is no subtitle,
-% leave the arguments empty. Pass the title in
-% the primary language as the first argument
-% and its translation to the secondary language
-% as the second.
-\title{Kuvaava otsikko}{A Descriptive Title}
-\subtitle{Tarkentava alaotsikko}{A Specifying Subtitle}
+\title{Lämpöpumppujen kommunikaatiorajapinnat ja niiden hyödyntämismahdollisuudet}
+\subtitle{Luonnos: versio 1}
 
 % The author name.
-\author{Etunimi Sukunimi}
+\author{Ilmari Marttila}
 
 % The examiner information.
 % If your work has multiple examiners, replace with
@@ -155,44 +137,27 @@
 % e.g. Examiners or Tarkastajat, and <name>s are
 % replaced by the examiner names, each on their
 % separate line.
-\examiner{Prof. Proffa Proffanen}
+\examiner{Prof. Sami Repo}
 
 % The finishing date of the thesis (YYYY-MM-DD).
 \finishdate{2020}{01}{29}
 
-% The type of the thesis (e.g. Kandidaatintyö
-% or Master of Science Thesis) in the primary
-% and the secondary languages of the thesis.
-\thesistype{Opinnäytetyön taso}{Thesis type}
 
-% The faculty and degree programme names in
-% the primary and the secondary languages of
-% the thesis.
-\facultyname{Tiedekunnan nimi}{Faculty Name}
-\programmename{Tutkinto-ohjelma}{Degree Programme}
+\thesistype{Kandidaatintyö}
 
-% The keywords to the thesis in the primary and
-% the secondary languages of the thesis
+\facultyname{Informaatioteknologian ja viestinnän tiedekunta}
+\programmename{Tekniikan kandidaatin tutkinto - Sähkötekniikka}
+
 \keywords%
-    {avainsana, avainsana, avainsana, avainsana, avainsana}
-    {keyword, keyword, keyword, keyword, keyword}
+    {avainsana}
 
 \maketitle
 
 %%%%% Abstracts and preface.
 
-% Write the abstract(s) and the preface
-% into a separate file for the sake of clarity.
-% Pass the appropriate file name as the first
-% argument to these commands. Put the \abstract
-% in the primary language first and the
-% \otherabstract in the secondary language second.
-% Those who do not speak Finnish only need the
-% first abstract. The second argument of
-% the \preface command takes the place where
-% the thesis was signed in.
-\abstract{tex/tiivistelma.tex}
-\preface{tex/alkusanat.tex}{Tampereella}
+%\abstract{tex/tiivistelma.tex}
+
+%\preface{tex/alkusanat.tex}{Tampereella}
 
 %%%%% Table of contents.
 
@@ -200,64 +165,37 @@
 
 %%%%% Lists of figures, tables, listings and terms.
 
-% Print the lists of figures and/or tables.
-% (Un)comment either of these commands as required.
-% Both are optional, but if there are many important
-% figures/tables, listing them may be a good idea.
-
 %\listoffigures
 %\listoftables
 %\lstlistoflistings
 
-% Print the glossary of terms.
 
-\glossary
+%\glossary
 
 %%%%% MAIN MATTER %%%%%
 
 \mainmatter
 
-% Write each of the chapters of the thesis
-% into a separate file for the sake of clarity.
-% They can be \input as shown below. Give both
-% the chapters and their files as descriptive
-% names as possible.
 \chapter{Johdanto}
 \label{ch:johdanto}
 \input{tex/johdanto.tex}
 
+% Add chapters
 
-\chapter{Viittaustekniikat}
-\label{ch:viittaustekniikat}
-\input{tex/viittaustekniikat.tex}
+%\chapter{Yhteenveto}
+%\label{ch:yhteenveto}
+%\input{tex/yhteenveto.tex}
 
-% Add chapters similarly.
-
-\chapter{Yhteenveto}
-\label{ch:yhteenveto}
-\input{tex/yhteenveto.tex}
-
-%%%%% Bibliography/references.
-
-% Print the bibliography according to the
-% information in ./tex/references.bib and
-% the in-line citations used in the body of
-% the thesis.
-% \emergencystretch=2em
 \printbibliography[heading=bibintoc]
 
 %%%%% Appendices.
 
-% Use only if it clarifies the structure of
-% the document. Remember to introduce each
-% appendix and its content.
+%\begin{appendices}
 
-\begin{appendices}
+%\chapter{Esimerkkiliite}
+%\label{ch:liite}
+%\input{./tex/liite.tex}
 
-\chapter{Esimerkkiliite}
-\label{ch:liite}
-\input{./tex/liite.tex}
-
-\end{appendices}
+%\end{appendices}
 
 \end{document}
