--- a/tex/references.bib
+++ b/tex/references.bib
@@ -1,21 +1,3 @@
-@manual{kirjoitusohje2018,
-title={Tampereen yliopiston tekniikan alan opinnäytteiden kirjoitusohje},
-organization={Tampereen yliopisto},
-location={Tampere},
-year={2018},
-note={Saatavissa: POP $>$ Opiskelu $>$ Diplomityö $>$ Diplomityöohje},
-label={Opinnäyteohje}
-}
-
-@manual{matohje2009,
-title={Matemaattisen tekstin kirjoittaminen},
-author={Ruohonen, Keijo},
-organization={Tampereen teknillinen yliopisto},
-location={Tampere},
-year={2009},
-url={http://math.tut.fi/~ruohonen/D-tyo-ohje.pdf}
-}
-
 @online{bibmanagement,
 title={\LaTeX/Bibliography Management},
 subtitle={biblatex},
@@ -23,4 +5,75 @@ date={2018-07-12},
 url={https://en.wikibooks.org/w/index.php?title=LaTeX/Bibliography_Management&stable=1},
 urldate={2018-12-27},
 label={\LaTeX{} WikiBook}
+}
+
+@online{kummu,
+author = "Kummu, Jussi",
+title={Lämpöpumput},
+date={2019-10-02},
+url={https://moodle.tuni.fi/pluginfile.php/308799/mod_resource/content/1/Heat Pumps Tampere University 2019 10 02.pdf},
+urldate={2020-01-09},
+label={esitelmä lämpöpumpuista}
+}
+
+@misc{rautiainen,
+author = "Rautiainen, Samu",
+copyright = "All rights reserved",
+keywords = "verkkovaikutus",
+language = "fin",
+organization = "Tampereen ammattikorkeakoulu",
+publisher = "Tampereen ammattikorkeakoulu",
+title = "Lämpöpumppujen verkkovaikutukset",
+year = "2018",
+}
+
+@article{ModelBasedFlexibilityAssessment,
+abstract = "<p>This paper presents and demonstrates a methodology to explore the flexibility of a heat pump pool. Three points are in the focus of this work: First the procedure to model a pool of residential heat pump systems. Second the study of the response of a large number of heat pumps when the Smart-Grid-Ready interface is used for direct load control. Third a general assessment of flexibility of a pool of heat pump systems.</p> <p>The presented pool model accounts for the diversity in space heating and domestic hot water demands, the types of heat source and heat distribution systems used and system sizing procedures. The model is validated using field test data. Flexibility is identified by sending trigger signals to a pool of 284 SG-Ready heat pumps and evaluating the response. Flexibility is characterized by maximum power, shiftable energy and regeneration time. Results show that flexibility is highly dependent on the ambient temperature and the use of an electric back-up...",
+author = "Fischer, David and Wolf, Tobias and Wapler, Jeannette and Hollinger, Raphael and Madani, Hatef",
+issn = "0360-5442",
+journal = "Energy",
+keywords = "Flexibility ; Heat Pumps ; Thermal Storage ; Pooling ; Demand Side Management ; Smart Grid ; Environmental Sciences ; Economics",
+language = "eng",
+pages = "853,864",
+publisher = "Elsevier Ltd",
+title = "Model-based flexibility assessment of a residential heat pump pool",
+volume = "118",
+year = "2017-01-01",
+}
+
+@article{ShenJiangLi,
+author = "Shen, Js and Jiang, CW and Li, BS",
+journal = "Energies",
+language = "English",
+number = "10",
+pages = "11187,11202",
+publisher = "MDPI",
+title = "Controllable Load Management Approaches in Smart Grids",
+volume = "8",
+year = "2015-10",
+}
+
+@INPROCEEDINGS{fischerTriebelSelinger,
+author={D. {Fischer} and M. {Triebel} and O. {Selinger-Lutz}},
+booktitle={2018 IEEE PES Innovative Smart Grid Technologies Conference Europe (ISGT-Europe)},
+title={A Concept for Controlling Heat Pump Pools Using the Smart Grid Ready Interface},
+year={2018},
+volume={},
+number={},
+pages={1-6},
+abstract={This paper introduces a control concept for aggregators to directly control a pool of residential heat pumps using market available technology. Smart meters are used for measuring the electric demand and the heat pumps' SG-Ready interfaces are used to trigger four different load-shifting strategies in the heat pump. The main idea of this paper is to use optimal control to calculate the setpoints for the pool and to track them using classic PID controls. The optimal control model as well as the implemented PID controller are both tailored to represent the available load shifting strategies. The characteristic response of the heat pump pool to a direct control signal is considered in the formulation of the optimal control problem. The control concept is tested with a pool of 284 heat pumps located in different buildings. The concept is demonstrated to realise an optimised operation of the pool respecting the variability of the prices on the day-ahead market for electricity. Tracking of a set-value for power consumption of the pool is presented. It showed that sending the signal to randomly selected heat pumps in the pool is similarly efficient as selecting from a priority list when not affecting the comfort of the occupants. Results indicate that control parameters should be continuously adjusted using an online estimation procedure to avoid oscillation.},
+keywords={heat pumps;optimal control;power markets;smart meters;smart power grids;heat pump pool;smart grid ready interface;residential heat pumps;optimal control model;direct control signal;control parameters;PID controller;load-shifting strategies;day-ahead market;power consumption;Load modeling;Heat pumps;Optimal control;Resistance heating;Switches;Smart meters;Buildings;Heat pumps;Thermal storage;Pooling;Aggregator;Direct controls;Optimal control;SG- Ready},
+doi={10.1109/ISGTEurope.2018.8571870},
+ISSN={null},
+month={Oct},}
+
+@incollection{sousaPortugal,
+author = "de Sousa, M. and Portugal, P.",
+booktitle = "Industrial Communication Systems",
+copyright = "Copyright 2019 Elsevier B.V., All rights reserved.",
+isbn = "9781439802823",
+pages = "36",
+publisher = "CRC Press",
+title = "Modbus",
+year = "2016-04-19",
 }
