--- a/main.tex
+++ b/main.tex
@@ -83,13 +83,6 @@
 
 %%%%% Your commands.
 
-
-% Definition style
-\theoremstyle{definition}
-\newtheorem{maaritelma}{Määritelmä}[chapter]
-\newtheorem{definition}[maaritelma]{Definition}
-% examples in this style
-
 %%%%% Glossary information.
 
 \loadglsentries[main]{tex/sanasto.tex}
@@ -113,7 +106,7 @@
 \subtitle{Luonnos: versio 1}
 
 % The author name.
-\author{Ilmari Marttila}
+\author{Ilmari Marttila, ilmari.marttila@tuni.fi}
 
 % The examiner information.
 % If your work has multiple examiners, replace with
