--- a/tex/suunnitelma.tex
+++ b/tex/suunnitelma.tex
@@ -11,7 +11,22 @@
 
   Läpöpumppujen määrä kotitalouksissa on noussut runsaasti viimeisten vuosien aikana. Lämpöpumput nähdään ekologisena vaihtoehtona lämpöenergian tuottamiseen. Samaan aikaan sähköntuotanto on tietynlaisessa murroksessa, jossa keskitetystä tuotannosta siirrytään kohti hajautettua ja täten hankalammin ennustettavaa (ja säästä riippuvaa) sähöntuotantoa. Kun tuotannon vaihtelu lisääntyy, myös kulutuksen pitää olla joustavampaa.
 
-  Selvitän työssäni mahdollisuuksia ja tapoja, joilla lämpöpumput voidaan ottaa mukaan tehontarpeen tasaukseen ja älykkään verkon toimintaan. Sitä ennen kuitenkin käydään läpi pumppujen sähkötekniikkaa ja sitä, miten pumput vaikuttavat sähköverkkoon. Teen myös katsauksen tapoihin ja teknologioihin, joilla pumppuja voidaan ohjata etänä. Olisi hienoa, jos saisin tehtyä jonkinlaisen pienen käytännön toteutuksen aiheesta, mutta en ole vielä löytänyt sopiavaa 
+  Selvitän työssäni mahdollisuuksia ja tapoja, joilla lämpöpumput voidaan ottaa mukaan tehontarpeen tasaukseen ja älykkään verkon toimintaan. Sitä ennen kuitenkin käydään läpi pumppujen sähkötekniikkaa ja sitä, miten pumput vaikuttavat sähköverkkoon. Teen myös katsauksen tapoihin ja teknologioihin, joilla pumppuja voidaan ohjata etänä. Olisi hienoa, jos saisin tehtyä jonkinlaisen pienen käytännön toteutuksen aiheesta, mutta en ole vielä löytänyt sopivaa kohdetta. Mikäli käyttöliittymän tekeminen ei onistu, olen ajatellut tehdä esimerkiksi simuloinnin tai laskelman ulkoisen ohjauksen mahdollisista vaikutuksista sehköverkon tehopiikkeihin.
+
+  Rajapintojen hyödyntämisellä on myös huonot puolensa. Yhtenä näkökulmana voisin käsitellä turvallisuutta. Toisena näköulman voisin käsitellä pumppujen ohjaamista esimerkiksi sähkön hinnan perusteella. Tämä saatta aiheuttaa kuormituspiikkejä verkkoon.
+
+\section{aikataulu}
+  \begin{itemize}
+    \item[viikko 7] Lähteiden kahlaaminen lävitse ja uusien etsiminen. Eka tapaaminen ohjaajan kanssa
+    \item[viiko 8] Käytännön osuuden lyöminen lukkoon.
+    \item[viikko 9] kappale 2
+    \item[viiko 10] kappale 3
+    \item[viiko 11] kappale 4
+    \item[viiko 12] kappale Johdanto
+    \item[viiko 13] kauhea kiire
+    \item[2020-03-29] eka palautus
+  \end{itemize}
+
 
 \section{sisältösuunnitelma}
 
@@ -29,7 +44,10 @@
     \item matalan tason kommunikointi
   \end{enumerate}
   \item lämpöpumppujen ohjauksella saavutettavat hyödyt
-  \item käytännön toteutus tai simulointi
+  \begin{enumerate}
+    \item mahdolliset haitat.
+  \end{enumerate}
+  \item käytännön toteutus, laskelma tai simulointi
   \item yhteenveto
 \end{enumerate}
 
