versio 1, suunnitelma lähetetty Repolle.

--- a/tex/suunnitelma.tex
+++ b/tex/suunnitelma.tex
@@ -22,7 +22,7 @@
     \item[viikko 9] kappale 2
     \item[viiko 10] kappale 3
     \item[viiko 11] kappale 4
-    \item[viiko 12] kappale Johdanto
+    \item[viiko 12] Johdanto
     \item[viiko 13] kauhea kiire
     \item[2020-03-29] eka palautus
   \end{itemize}
