Nikolle ja Ilelle omat lahdeluettelotiedostot.

--- a/main.tex
+++ b/main.tex
@@ -90,7 +90,8 @@
 
 %%%%% Citation information.
 
-\addbibresource{tex/references.bib}
+\addbibresource{tex/ilmari_references.bib}
+\addbibresource{tex/niko_references.bib}
 
 \hypersetup{hidelinks}
 
@@ -106,7 +107,7 @@
 \subtitle{Luonnos: versio 1}
 
 % The author name.
-\author{Ilmari Marttila, ilmari.marttila@tuni.fi}
+\author{Ilmari Marttila, ja Niko Kangasniemi}
 
 % The examiner information.
 % If your work has multiple examiners, replace with
@@ -127,7 +128,7 @@
 \programmename{Tieto- ja sähkötekniikan TkK-tutkinto-ohjelma - Sähkötekniikka}
 
 \keywords%
-    {avainsana}
+    {}
 
 \maketitle
 
