Kappale ja kuvia muakattu.

--- a/main.tex
+++ b/main.tex
@@ -105,11 +105,11 @@
 
 %%%%% Thesis information and title page.
 
-\title{Lämpöpumppujen kommunikaatiorajapinnat ja niiden hyödyntämismahdollisuudet}
+\title{Lämpöpumppujen ja aurinkoinventtereiden kommunikaatiorajapinnat ja niiden hyödyntämismahdollisuudet}
 \subtitle{Luonnos: versio 1}
 
 % The author name.
-\author{Ilmari Marttila, ja Niko Kangasniemi}
+\author{Ilmari Marttila ja Niko Kangasniemi}
 
 % The examiner information.
 % If your work has multiple examiners, replace with
@@ -156,8 +156,8 @@
 %%%%% MAIN MATTER %%%%%
 
 \mainmatter
-\chapter{Suunnitelma}
-\input{tex/suunnitelma.tex}
+% \chapter{Suunnitelma}
+% \input{tex/suunnitelma.tex}
 
 %\chapter{Johdanto}
 %\label{ch:johdanto}
