Oikosulkumoottori ja toimintaperiaatteen hiominen.

--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -1,3 +1,8 @@
+@misc{Lahde,
+title={lähde puuttuu toistaiseksi},
+label={Tää}
+}
+
 @online{bibmanagement,
 title={\LaTeX/Bibliography Management},
 subtitle={biblatex},
@@ -13,18 +18,18 @@ title={Lämpöpumput},
 date={2019-10-02},
 url={https://moodle.tuni.fi/pluginfile.php/308799/mod_resource/content/1/Heat Pumps Tampere University 2019 10 02.pdf},
 urldate={2020-01-09},
-label={esitelmä lämpöpumpuista}
+note={Esitelmä lämpöpumpuista}
 }
 
 @misc{rautiainen,
 author = "Rautiainen, Samu",
 copyright = "All rights reserved",
 keywords = "verkkovaikutus",
-language = "fin",
 organization = "Tampereen ammattikorkeakoulu",
 publisher = "Tampereen ammattikorkeakoulu",
 title = "Lämpöpumppujen verkkovaikutukset",
 year = "2018",
+note = "Huono lähde, etsi parempi"
 }
 
 @article{ModelBasedFlexibilityAssessment,
@@ -76,4 +81,27 @@ pages = "36",
 publisher = "CRC Press",
 title = "Modbus",
 year = "2016-04-19",
+}
+
+@article{Setala,
+author={Niina Setälä},
+title={Tarjolla uusia mahdollisuuksia teollisuuden hukkalämmön hyödyntämiseen: korkealämpöpumput tuottavat jo 100 celsiusastetta},
+urldate={2020-03-24},
+date={2020-03-07},
+url={https://www-tekniikkatalous-fi.libproxy.tuni.fi/uutiset/tarjolla-uusia-mahdollisuuksia-teollisuuden-hukkalammon-hyodyntamiseen-korkealampopumput-tuottavat-jo-100-celsiusastetta/cecda00f-3b2c-493b-a325-b22a41daec5a},
+publisher={Tekniikka & Talous}
+}
+
+@incollection{DincerRosen,
+title = "Chapter 7 - Exergy Analysis of Heat Pump Systems",
+editor = "Ibrahim Dincer and Marc A. Rosen",
+booktitle = "Exergy (Second Edition)",
+publisher = "Elsevier",
+edition = "Second Edition",
+pages = "101 - 113",
+year = "2013",
+isbn = "978-0-08-097089-9",
+doi = "https://doi.org/10.1016/B978-0-08-097089-9.00007-3",
+url = "http://www.sciencedirect.com/science/article/pii/B9780080970899000073",
+author = "Ibrahim Dincer and Marc A. Rosen"
 }
