--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -1,8 +1,3 @@
-@misc{Lahde,
-title={lähde puuttuu toistaiseksi},
-label={Tää}
-}
-
 @online{bibmanagement,
 title={\LaTeX/Bibliography Management},
 subtitle={biblatex},
@@ -104,4 +99,18 @@ isbn = "978-0-08-097089-9",
 doi = "https://doi.org/10.1016/B978-0-08-097089-9.00007-3",
 url = "http://www.sciencedirect.com/science/article/pii/B9780080970899000073",
 author = "Ibrahim Dincer and Marc A. Rosen"
+}
+
+@techreport{SFSEN50160,
+type = {Standardi},
+title={Yleisestä Jakeluverkosta Syötetyn Sähkön Jänniteominaisuudet},
+publisher={Suomen Standardoimidiitto SFS},
+number = {SFS-EN 50160:2010},
+institution = {Suomen Standardoimidiitto SFS}
+}
+
+@manual{pehmokaynnistinopas,
+title={Pehmokäynnistinopas},
+author={ABB},
+url={https://library.e.abb.com/public/d11f99611045fef8c125796e00473a8a/OPAS Pehmokaynnistys 1FI12_01.pdf}
 }
